js/js.translator/testData/incremental/invalidation/KT-85270/main/useStdlibDeclarationUsedInKTest.1.kt
fun useStdlibDeclarationUsedInKTest(): Boolean {
    return true
}